enum PaymentStatus {
  initial,
  initiated,
  submitted,
  approved,
  declined,
  error,
}
